# aliyun-openapi-rust-sdk

./: .gitignore  Cargo.toml  README.md  rust-toolchain
examples/: oss-client.rs
src/: auth.rs  credential.rs  dm.rs  lib.rs  oss.rs  prelude.rs  utils.rs
tests/: reqwest-tests.rs
