[package]
name = "aliyun-openapi"
version = "0.1.0"
edition = "2018"
authors = ["linux_china <libing.chen@gmail.com>"]
description = "Alibaba Cloud OpenAPI SDK for Rust"
keywords = ["aliyun", "SDK"]
categories = ["network-programming"]
documentation = "https://github.com/linux-china/aliyun-openapi-rust-sdk"
readme = "README.md"
homepage = "https://github.com/linux-china/aliyun-openapi-rust-sdk"
repository = "https://github.com/linux-china/aliyun-openapi-rust-sdk"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
tokio = { version = "0.2", features = ["full"] }
bytes = "0.5"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"
lazy_static = "1.4.0"
rust-crypto = "^0.2"
base64 = "0.13"
chrono = "0.4"
url = "^2.2.0"
